infra/environments/production/replicasPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crash-game
spec:
  replicas: 2
