infra/environments/production/ingressPatch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crash-game-ingress
spec:
  tls:
  - hosts:
    - production-elon-api.wallfair.io
    - prod-test-elon-api.wallfair.io
    secretName: crash-game-production-cert-secret
  rules:
  - host: production-elon-api.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: crash-game-backend
              port:
                number: 80
  - host: production-pump-dump-api.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pump-dump-game-backend
              port:
                number: 80
